--- a/code/.vscode/settings.json
+++ b/code/.vscode/settings.json
@@ -3,6 +3,10 @@
     "system_error": "cpp",
     "iostream": "cpp",
     "utility": "cpp",
-    "ostream": "cpp"
+    "ostream": "cpp",
+    "egl.h": "c",
+    "limelight-internal.h": "c",
+    "limelight.h": "c",
+    "rtpaudioqueue.h": "c"
   }
 }
