Begin working on the Background section
The first words are always the hardest

--- a/paper/.vscode/settings.json
+++ b/paper/.vscode/settings.json
@@ -4,6 +4,10 @@
   "editor.wrappingIndent": "same",
   // "latex-workshop.view.pdf.invert": 0,
   "cSpell.words": [
+    "componentization",
+    "reengineered",
+    "reengineering",
+    "repairability",
     "Responsivity"
   ]
 }
