Draft State of the Art Chapter
I need to pick up the pace

--- a/paper/.vscode/settings.json
+++ b/paper/.vscode/settings.json
@@ -4,7 +4,9 @@
   "editor.wrappingIndent": "same",
   // "latex-workshop.view.pdf.invert": 0,
   "cSpell.words": [
+    "Chromoting",
     "componentization",
+    "keyframes",
     "reengineered",
     "reengineering",
     "repairability",
