Fix feedback issues and start Design PCB section

--- a/paper/.vscode/settings.json
+++ b/paper/.vscode/settings.json
@@ -10,6 +10,7 @@
     "reengineered",
     "reengineering",
     "repairability",
-    "Responsivity"
+    "Responsivity",
+    "revisioning"
   ]
 }
