Designing the power, usb, hdmi and start cm4 circuits

--- a/paper/.vscode/settings.json
+++ b/paper/.vscode/settings.json
@@ -6,7 +6,9 @@
   "cSpell.words": [
     "Chromoting",
     "componentization",
+    "datasheets",
     "keyframes",
+    "pinout",
     "reengineered",
     "reengineering",
     "repairability",
