(almost) finish draft of hardware section
Still need to investigate the USB issues and maybe add more detail to the end of the chapter, but other than that I have a couple of questions to resolve then I'm happyish with the chapter

--- a/paper/.vscode/settings.json
+++ b/paper/.vscode/settings.json
@@ -6,7 +6,10 @@
   "cSpell.words": [
     "Chromoting",
     "componentization",
+    "datasheet",
     "datasheets",
+    "Digi",
+    "JLCPCB",
     "keyframes",
     "pinout",
     "reengineered",
