Start the software section

--- a/paper/.vscode/settings.json
+++ b/paper/.vscode/settings.json
@@ -16,6 +16,8 @@
     "reengineering",
     "repairability",
     "Responsivity",
-    "revisioning"
+    "revisioning",
+    "unauthorizing",
+    "unpairs"
   ]
 }
